Enhance modal accessibility with ARIA attributes and improve focus management

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
   </footer>
 
   <!-- Modal Dialog -->
-  <div class="modal" id="confirmModal">
+  <div class="modal" id="confirmModal" tabindex="0" role="dialog" aria-labelledby="confirmModalTitle" aria-describedby="confirmModalDesc">
     <div class="modal-content">
-      <h3>Confirm Action</h3>
-      <p>Are you sure you want to turn off the accessibility overlay? This will reveal the visual interface.</p>
+      <h3 id="confirmModalTitle">Confirm Action</h3>
+      <p id="confirmModalDesc">Are you sure you want to turn off the accessibility overlay? This will reveal the visual interface.</p>
       
       <div class="timeout-warning" id="timeoutWarning">
         <p>You haven't interacted with this modal in a while. This modal will disappear in <span class="countdown" id="countdown">5</span> seconds if you don't click here.</p>
