Add aria-live attribute to timeout warning for improved accessibility

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <h3 id="confirmModalTitle">Confirm Action</h3>
       <p id="confirmModalDesc">Are you sure you want to turn off the accessibility overlay? This will reveal the visual interface.</p>
       
-      <div class="timeout-warning" id="timeoutWarning">
+      <div class="timeout-warning" id="timeoutWarning" aria-live="polite">
         <p>You haven't interacted with this modal in a while. This modal will disappear in <span class="countdown" id="countdown">5</span> seconds if you don't click here.</p>
         <button onclick="resetTimeout()">I'm still here!</button>
       </div>
