--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="menu-item" href="#footer">Support</a>
     <a class="menu-item" target="_blank" href="https://www.jemimaabu.com">Blog</a>
     <div class="dropdown">
-      <div class="dropdown-toggle" onclick="toggleDropdown(event)">More Options</div>
+      <button class="dropdown-toggle" onclick="toggleDropdown(event)">More Options</button>
       <div class="dropdown-content">
         <a class="menu-item" href="#">Privacy Policy</a>
         <a class="menu-item" href="#">Terms of Service</a>
